webook/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-live-mysql
  labels:
    app: webook-live-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-live-mysql
  template:
    metadata:
      name: webook-live-mysql
      labels:
        app: webook-live-mysql
    spec:
      containers:
        - name: webook-live-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
# 这边要对应到 MySQL 的数据存储位置
            - mountPath: /val/lib/mysql
# 我 POD 里面有那么多 volume ，我要用哪一个
              name: mysql-storage
          ports:
            - containerPort: 3306
      restartPolicy: Always
# 我整个 POD 有哪些
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-live-claim
#        - name: hadoop-storage
