webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-live
# spec 规格说明
spec:
# 副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook-live
# template 描述的是你的 POD 是什么样的
  template:
    metadata:
      labels:
        app: webook-live
# POD 的具体信息
    spec:
      containers:
        - name: webook
          image: zms/webook-live:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
