webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
# 说明要用 nginx
  ingressClassName: nginx
  rules:
    - host: live.webook.com
      http:
        paths:
#
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webook-live
                port:
                  number: 81
